<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBE3E3"
    android:orientation="vertical"
    tools:context=".Activity.RegisterActivity">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/circle_image"
    tools:context=".Activity.RegisterActivity">


    <LinearLayout
    android:layout_width="match_parent"
    android:layout_marginTop="30dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userprofile"
            android:layout_width="73dp"
            android:layout_height="92dp"
            android:layout_gravity="center"
            android:src="@drawable/circleuser" />
        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/login_edittext"
            android:hint="Name"
            android:paddingLeft="18dp" />



    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/login_edittext"
        android:hint="E-mail"
        android:paddingLeft="18dp" />
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/login_edittext"
            android:hint="contact No"
            android:paddingLeft="18dp" />
        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/login_edittext"
            android:hint="username"
            android:paddingLeft="18dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="42dp"
        android:background="@drawable/login_edittext"
        android:hint="Password"
        android:paddingLeft="18dp"
        />
        <EditText
            android:id="@+id/cpassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="42dp"
            android:background="@drawable/login_edittext"
            android:hint="ConfirmPassword"
            android:paddingLeft="18dp"
            />
        <CheckBox
            android:id="@+id/chkrememberme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I agree all Terms and Conditions."
            />


    <Button
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/button"
        android:text="sign Up"
        android:textColor="#FFFFFF"
        android:textSize="16dp" />
</LinearLayout>


</RelativeLayout>
</ScrollView>