...
                android:paddingLeft="18dp" />




            <Button
                android:id="@+id/updateuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/button"
                android:text="update"
                android:textColor="#FFFFFF"
...
